package com.iting.jobportal.application.entity;

public class ApplyForm {
}
